examples/test/testpolicy1170.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1170
  namespace: namespace211
spec:
  podSelector:
    matchLabels:
      key11: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value15
          key48: value2
      podSelector:
        matchLabels:
          key31: value19
          key21: value16
